登陆界面、调试模式界面完成

--- a/huayuTestMFC/huayuTestMFC.vcxproj
+++ b/huayuTestMFC/huayuTestMFC.vcxproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <ClInclude Include="huayuTestMFC.h" />
     <ClInclude Include="huayuTestMFCDlg.h" />
+    <ClInclude Include="LoginDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -109,6 +110,7 @@
   <ItemGroup>
     <ClCompile Include="huayuTestMFC.cpp" />
     <ClCompile Include="huayuTestMFCDlg.cpp" />
+    <ClCompile Include="LoginDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
