--- a/huayuTestMFC/huayuTestMFC.vcxproj.filters
+++ b/huayuTestMFC/huayuTestMFC.vcxproj.filters
@@ -22,7 +22,7 @@
     <None Include="res\huayuTestMFC.ico">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="res\icon1.ico">
+    <None Include="华宇经编二期系统.bmp">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
